hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_arity_mismatch3.php.exp
File "explicit_type_collection_arity_mismatch3.php", line 4, characters 14-26:
`keyset` takes exactly one type argument (Parsing[1002])
