hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_arity_mismatch3.php
<?hh // strict

function f(): void {
  $a = keyset<int, string>[];
}
